# cw_7

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodicity.py  0003_alter_habit_connected_enjoyable_habit_and_more.py  0004_rename_lead_time_in_seconds_habit_duration_in_seconds.py  0005_remindertask.py
habits/services/: celery_task_create.py  utils.py
telegram_conn/: admin.py  apps.py  models.py  tasks.py  urls.py
telegram_conn/migrations/: 0001_initial.py  0002_alter_connectedchats_tg_chat_id.py  0003_alter_connectedchats_options.py  0004_processedmessage.py  0005_alter_processedmessage_message_data.py  0006_delete_connectedchats.py  0007_alter_processedmessage_message_data.py
telegram_conn/services/: tg_api.py
users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_user_tg_chat_id.py
users/services/: token_handler.py  utils.py
